Fixed small jump in menu

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -10,6 +10,11 @@
 	margin-top: -1em;
 	height: 2em;
 
+	> div {
+		float: right;
+		@include clearfix();
+	}
+
 	ul {
 		list-style: none;
 		margin: 0;
@@ -18,7 +23,7 @@
 		// First level menu, always visible
 		> li {
 			display: inline-block;
-			padding: 0.5em 0;
+			padding: 0.25em 0;
 
 			a {
 				padding-left: 30px;
@@ -173,7 +178,7 @@
 	.north-icon-search {
 		float: right;
 		font-size: 16px;
-		margin-top: 10px;
+		margin-top: 7px;
 		cursor: pointer;
 	}
 
