--- a/style.css
+++ b/style.css
@@ -425,13 +425,17 @@ a {
   right: 20px;
   margin-top: -1em;
   height: 2em; }
+  .main-navigation > div {
+    float: right;
+    content: "";
+    display: table; }
   .main-navigation ul {
     list-style: none;
     margin: 0;
     padding-left: 0; }
     .main-navigation ul > li {
       display: inline-block;
-      padding: 0.5em 0; }
+      padding: 0.25em 0; }
       .main-navigation ul > li a {
         padding-left: 30px;
         padding-right: 30px; }
@@ -527,7 +531,7 @@ a {
   .main-navigation .north-icon-search {
     float: right;
     font-size: 16px;
-    margin-top: 10px;
+    margin-top: 7px;
     cursor: pointer; }
   @media screen and (max-width: 600px) {
     .main-navigation #mobile-menu-button {
@@ -860,8 +864,7 @@ a {
   padding: 30px 0;
   position: relative;
   margin-bottom: 30px;
-  width: 100%;
-  position: relative; }
+  width: 100%; }
   #masthead .container-inner {
     content: "";
     display: table; }
